<resources>
    <!-- MainActivity -->
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="popular_movies">POP MOVIES</string>
    <string name="capstone">CAPSTONE</string>
    <string name="go_ubiquitous">GO UBIQUITOUS</string>
    <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="stock_hawk">STOCK HAWK</string>
    <string name="movie_detail">MovieDetail</string>
    <!-- PopularMoviesActivity -->
    <string name="title_activity_settings">Settings</string>
    <string name="mark_as">MARK AS</string>
    <string name="favorite">FAVORITE</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_collection">COLLECTION</string>
    <string name="popularity">Popularity</string>
    <string name="average">Average</string>
    <string name="marked">you marked</string>
    <string name="btn1_toast">This button will launch POPULAR MOVIES!</string>
    <string name="btn2_toast">This button will launch STOCK HAWK!</string>
    <string name="btn3_toast">This button will BUILD IT BIGGER!</string>
    <string name="btn4_toast">This button will launch MAKE YOUR APP MATERIAL!</string>
    <string name="btn5_toast">This button will launch GO UBIQUITOUS!</string>
    <string name="btn6_toast">This button will launch my capstone app!</string>
    <string name="collection">Collection</string>
    <string name="movie_collection">MovieCollection</string>
    <string name="review">REVIEW</string>
    <string name="author">author: </string>
    <string name="content">content: </string>
    <string name="trailer">TRAILER</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">project00.cqing.com</string>
    <string name="content_authority">com.cqing.project00</string>
</resources>
