<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    android:orientation="vertical"
    tools:context="com.cqing.project00.activity.MainActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="3dp"
        android:text="@string/my_nanodegree_apps"
        android:textSize="@dimen/text_size"
        android:textColor="@color/textColor"/>
    <Button
        android:id="@+id/btn_1"
        style="@style/btn_syle"
        android:text="@string/popular_movies"
        />
    <Button
        android:id="@+id/btn_2"
        style="@style/btn_syle"
        android:text="@string/stock_hawk"
        />
    <Button
        android:id="@+id/btn_3"
        style="@style/btn_syle"
        android:text="@string/build_it_bigger"
        />
    <Button
        android:id="@+id/btn_4"
        style="@style/btn_syle"
        android:text="@string/make_your_app_material"
        />
    <Button
        android:id="@+id/btn_5"
        style="@style/btn_syle"
        android:text="@string/go_ubiquitous"
        />
    <Button
        android:id="@+id/btn_6"
        style="@style/btn_syle"
        android:text="@string/capstone"
        />
</LinearLayout>
