<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        style="@style/detailTitleText" />

        <RelativeLayout
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/movie_detail_padding_top">

            <ImageView
                android:id="@+id/iv_movies"
                android:layout_width="@dimen/iv_thumbnail_width"
                android:layout_height="@dimen/iv_thumbnail_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                tools:src="@drawable/error"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/iv_movies"
                tools:text="2012-10-15"
                android:textSize="@dimen/text_date"
                android:textColor="@color/black"/>

            <LinearLayout
                android:id="@+id/relativeLayout_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/tv_data"
                android:orientation="horizontal"
                android:layout_toRightOf="@+id/iv_movies">

                <TextView
                    android:id="@+id/tv_average_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average"
                    android:textSize="@dimen/text_average"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_averages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/text_date"
                    tools:text="8.3"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/relativeLayout_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/relativeLayout_average"
                android:orientation="horizontal"
                android:layout_toRightOf="@+id/iv_movies">

                <TextView
                    android:id="@+id/tv_popularity_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popularity"
                    android:textSize="@dimen/text_average"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/text_date"
                    tools:text="45.2"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout_btn"
                style="@style/relativeLayoutButton"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/relativeLayout_top_rated"
                android:layout_toRightOf="@+id/iv_movies">

                <TextView
                    android:id="@+id/tv_btn_mark_as"
                    style="@style/relativeLayoutButtonTextView"
                    android:layout_centerHorizontal="true"
                    tools:text="MARK_AS"
                    />

                <TextView
                    android:id="@+id/tv_btn_favorite"
                    style="@style/relativeLayoutButtonTextView"
                    android:layout_below="@+id/tv_btn_mark_as"
                    tools:text="FAVORITE"
                    />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/relative_layout_padding_top"
            android:layout_marginBottom="@dimen/relative_layout_padding_top">

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tv_overview"
                android:textColor="@color/black"/>
        </RelativeLayout>

</LinearLayout>